banco de dados MySQL e Ajustes visuais.

--- a/medsales/medsales-app/src/main/webapp/index2.xhtml
+++ b/medsales/medsales-app/src/main/webapp/index2.xhtml
@@ -13,6 +13,11 @@
 
 	<ui:define name="content">
 	
+		<h:form>
+		
+			<p:commandButton value="Carregar Dados" action="#{dataStartupService.load()}" />
+		
+		</h:form>
 	
 	</ui:define>
 </ui:composition>
