--- a/medsales/medsales-app/src/main/webapp/movimento/estoque/saida.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/estoque/saida.xhtml
@@ -77,7 +77,7 @@
 						<p:outputLabel value="Desconto" for="desconto" />
 						<p:outputPanel>
 							<pe:inputNumber id="desconto" value="#{saidaAction.movimentacao.desconto}" symbol=" %" symbolPosition="suffix"/>
-							<p:commandButton value="Aplicar" update=":listForm :totalizadorPanel"
+							<p:commandButton icon="ui-icon-check" update=":listForm :totalizadorPanel"
 								actionListener="#{saidaAction.aplicarDesconto()}" />
 						</p:outputPanel>
 
@@ -121,7 +121,7 @@
 							<h:outputText value=" (NC)" styleClass="labelFormula" />
 						</p:outputPanel>
 						<p:outputPanel>
-							<h:outputText id="notaOriginal" value="#{totalNotaCompra}">
+							<h:outputText id="notaOriginal" value="#{totalNotaCompra}" style="padding-right: 5px">
 								<f:convertNumber type="currency" pattern="R$ #,##0.00" />
 							</h:outputText>
 							<p:commandButton id="valoresNotaOriginal" icon="ui-icon-extlink" type="button" />
