ajustando título da saída de estoque.

--- a/medsales/medsales-app/src/main/webapp/movimento/estoque/reciboSaida.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/estoque/reciboSaida.xhtml
@@ -38,7 +38,7 @@
 		<div class="page-header">
 			<h1>
 				<p:inplace editor="true">
-					<p:inputText value="#{saidaReciboAction.tituloRecibo}" />
+					<p:inputText value="#{saidaReciboAction.titulo}" />
 				</p:inplace>
 			</h1>
 		</div>
