Implementando Operator para consulta o preço mais recente de um produto. Restaurando o Focus na tela de entrada e saida.

--- a/medsales/medsales-app/src/main/webapp/movimento/estoque/criarMovimentoTemplate.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/estoque/criarMovimentoTemplate.xhtml
@@ -49,6 +49,7 @@ function limparCampoProduto() {
 		</h:form>
 
 		<h:form id="itemForm">
+			<p:focus context="itemGrid" />
 			<p:panelGrid id="itemGrid" columns="3" layout="grid" columnClasses="labels_col1">
 
 				<p:outputLabel value="Produto:" for="produto" styleClass="dontprint" />
